--- a/index.html
+++ b/index.html
@@ -138,76 +138,76 @@
           the most exquisite tastes around the world
         </p>
       </div>
-      <br>
-      <h1 style="text-align: center; color: var(--main-color);">Veg Pizza</h1>
+      <br />
+      <h1 style="text-align: center; color: var(--main-color)">Veg Pizza</h1>
 
       <div class="menu-content">
         <div class="row">
-            <img src="./img/Supreme_Pizza.webp" alt="main-product1" />
-            <div class="menu-text">
-              <div class="menu-left">
-                <h4>Hawaiian Pizza</h4>
-              </div>
-              <div class="menu-right">
-                <h5>$17.00</h5>
-              </div>
+          <img src="./img/Supreme_Pizza.webp" alt="main-product1" />
+          <div class="menu-text">
+            <div class="menu-left">
+              <h4>Hawaiian Pizza</h4>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
-              magnam.
-            </p>
-            <div class="star">
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
+            <div class="menu-right">
+              <h5>$17.00</h5>
             </div>
           </div>
-          <div class="row">
-            <img src="./img/The_Works_Pizza.webp" alt="main-product2" />
-            <div class="menu-text">
-              <div class="menu-left">
-                <h4>Supreme Pizza</h4>
-              </div>
-              <div class="menu-right">
-                <h5>$17.00</h5>
-              </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+            magnam.
+          </p>
+          <div class="star">
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+          </div>
+        </div>
+        <div class="row">
+          <img src="./img/The_Works_Pizza.webp" alt="main-product2" />
+          <div class="menu-text">
+            <div class="menu-left">
+              <h4>Supreme Pizza</h4>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
-              magnam.
-            </p>
-            <div class="star">
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
+            <div class="menu-right">
+              <h5>$17.00</h5>
             </div>
           </div>
-          <div class="row">
-            <img src="./img/Greek-Style-Pizza.webp" alt="main-product3" />
-            <div class="menu-text">
-              <div class="menu-left">
-                <h4>Chicago Deep Dish Pizza</h4>
-              </div>
-              <div class="menu-right">
-                <h5>$17.00</h5>
-              </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+            magnam.
+          </p>
+          <div class="star">
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+          </div>
+        </div>
+        <div class="row">
+          <img src="./img/Greek-Style-Pizza.webp" alt="main-product3" />
+          <div class="menu-text">
+            <div class="menu-left">
+              <h4>Chicago Deep Dish Pizza</h4>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
-              magnam.
-            </p>
-            <div class="star">
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
-              <a href="#"><i class="bx bxs-star"></i></a>
+            <div class="menu-right">
+              <h5>$17.00</h5>
             </div>
           </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+            magnam.
+          </p>
+          <div class="star">
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+            <a href="#"><i class="bx bxs-star"></i></a>
+          </div>
+        </div>
 
         <div class="row">
           <img src="./img/BBQ_Chicken_Pizza.webp" alt="main-product4" />
@@ -233,15 +233,18 @@
         </div>
       </div>
 
-      <br> <br>
-      <h1 style="text-align: center; color: var(--main-color);">Non-Veg Pizza</h1>
+      <br />
+      <br />
+      <h1 style="text-align: center; color: var(--main-color)">
+        Non-Veg Pizza
+      </h1>
 
       <div class="menu-content">
         <div class="row">
           <img src="./img/PESTO.png" alt="main-product5" />
           <div class="menu-text">
             <div class="menu-left">
-              <h4> Chicken Pesto Pizza</h4>
+              <h4>Chicken Pesto Pizza</h4>
             </div>
             <div class="menu-right">
               <h5>$17.00</h5>
@@ -329,68 +332,71 @@
     </section>
 
     <div id="contact" class="contact">
+      <h2>Contact Us</h2>
+      <p>Have a question or feedback? Reach out to us!</p>
 
-    <h2>Contact Us</h2>
-    <p>Have a question or feedback? Reach out to us!</p>
-
-    <div class="contact-form">
+      <div class="contact-form">
         <form action="#" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
 
-            <label for="phone number">Phone Number:</label>
-            <input type="tel" id="phone number" name="phone number" required >
+          <label for="phone number">Phone Number:</label>
+          <input type="tel" id="phone number" name="phone number" required />
 
-            <label for="message">Feedback:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
+          <label for="message">Feedback:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
 
-            <button type="submit" class="btn">Send Message</button>
+          <button type="submit" class="btn">Send Message</button>
         </form>
+      </div>
     </div>
 
-</div>
+    <section class="footer">
+      <div class="main-footer">
+        <div class="footer-content">
+          <h4>Services</h4>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </div>
 
-		<section class="footer">
-			<div class="main-footer">
-				<div class="footer-content">
-					<h4>Services</h4>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#menu">Menu</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</div>
+        <div class="footer-content">
+          <h4>Delivery</h4>
+          <li><a href="#">Uber Eats</a></li>
+          <li><a href="#">DoorDash</a></li>
+          <li><a href="#menu">ChowNow</a></li>
+          <li><a href="#">Toast TakeOut</a></li>
+        </div>
 
-				<div class="footer-content">
-					<h4>Delivery</h4>
-					<li><a href="#">Uber Eats</a></li>
-					<li><a href="#">DoorDash</a></li>
-					<li><a href="#menu">ChowNow</a></li>
-					<li><a href="#">Toast TakeOut</a></li>
-				</div>
+        <div class="footer-content">
+          <h4>Contact</h4>
+          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="#">Press Center</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">FAQ</a></li>
+        </div>
 
-				<div class="footer-content">
-					<h4>Contact</h4>
-					<li><a href="#contact">Contact Us</a></li>
-					<li><a href="#">Press Center</a></li>
-					<li><a href="#">Careers</a></li>
-					<li><a href="#">FAQ</a></li>
-				</div>
-
-				<div class="footer-content">
-					<h4>Follow Us</h4>
-					<li><a href="#">TikTok</a></li>
-					<li><a href="#">Twitter</a></li>
-					<li><a href="#">Facebook</a></li>
-					<li><a href="#">Instagramm</a></li>
-				</div>
-			</div>
-		</section>
+        <div class="footer-content">
+          <h4>Follow Us</h4>
+          <li><a href="#">TikTok</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Instagramm</a></li>
+        </div>
+      </div>
+    </section>
 
     <div class="last-text">
-      <p>© Developed 2023 by <a href="https://github.com/ShivendraPandey26">Shivendra Kumar Pandey</a></p>
+      <p>
+        © Developed 2023 by
+        <a href="https://github.com/ShivendraPandey26"
+          >Shivendra Kumar Pandey</a
+        >
+      </p>
     </div>
 
     <!-- scroll top -->
