--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <label for="message">Feedback:</label>
           <textarea id="message" name="message" rows="4" required></textarea>
 
-          <button type="submit" class="btn">Send Message</button>
+          <button type="submit" class="btn" style="border: none;">Send Message</button>
         </form>
       </div>
     </div>
