--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     </section>
 
     <div id="contact" class="contact">
-      <h2>Contact Us</h2>
+      <h2 style="font-size: 3rem;">Contact Us</h2>
       <p>Have a question or feedback? Reach out to us!</p>
 
       <div class="contact-form">
